# python_pkg_template

./: README.md  pyproject.toml  setup.cfg  tox.ini
docs/source/: conf.py  index.rst  installation.md  modules.rst  python_pkg_template.rst
src/python_pkg_template/: example_function.py  main.py
tests/: test_example_function.py  test_main.py
