[metadata]
name = python_pkg_template
version = 0.1.0

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.6
install_requires =
# e.g. numpy

[options.packages.find]
where=src 

[options.extras_require]
dev =
    python_pkg_template[test]
    python_pkg_template[doc]
    tox
test =
    pytest
    black
    flake8
    isort

docs = sphinx
