[metadata]
name = python_pkg_template
version = 0.0.1

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.6
install_requires =
    numpy

[options.packages.find]
where=src 

[options.extras_require]
dev =
    python_pkg_template[test]
    python_pkg_template[doc]
    tox
test =
    pytest
    pytest-cov
    coverage
    black
    isort

docs = sphinx
